# Follow-Pay

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
config/: settings.py  urls.py
creators/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
creators/migrations/: 0001_initial.py  0002_initial.py  0002_remove_creator_subscription_currency_and_more.py  0003_alter_creator_created_at.py
payments/: models.py  services.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_initial.py  0002_rename_payments_payment.py  0003_alter_payment_created_at_alter_payment_creator_and_more.py
posts/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_body_alter_post_created_at_alter_post_creator_and_more.py
subscriptions/: models.py  serializers.py  urls.py  views.py
subscriptions/migrations/: 0001_initial.py  0002_alter_subscription_creator.py  0002_initial.py  0003_alter_subscription_created_at_and_more.py
tests/: conftest.py  test_creators.py  test_payments.py  test_posts.py  test_subscriptions.py  test_telegram.py  test_users.py
users/: admin.py  managers.py  models.py  password_reset.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_phone_alter_user_email.py  0003_phonelogincode.py
web/: forms.py  urls.py  views.py
web/templates/web/: base.html  creator_detail.html  creator_form.html  creators.html  dashboard.html  error.html  home.html  (+9 more)
